[GTK] Geoclue2 providers won't work after reloading https://bugs.webkit.org/show_bug.cgi?id=130898

Reviewed by Martin Robinson.

Don't reuse the Geoclue2 client proxy between different calls to
startPosition(), and create a new client proxy each time instead.

* platform/geoclue/GeolocationProviderGeoclue2.cpp:
(GeolocationProviderGeoclue::startUpdating): Don't reuse the
client proxy, by always calling geoclue_manager_call_get_client().
(GeolocationProviderGeoclue::stopUpdating): Disconnect from the
'location-updated' signal and dispose the client proxy.


Canonical link: https://commits.webkit.org/148922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166406 268f45cc-cd09-0410-ab3c-d52691b4dbfc